@@ -1,3 +1,10 @@
+2010-08-18  Ryan Nunn <colourles@users.sourceforge.net>
+	* imagewin/imagewin.* : Attempting to work around problems experienced by 
+	  Dominik. Checks for Windowed surface format support is now done at 
+	  startup. Changed things so if SDL_VideoModeOK() checks fail, Exult still
+	  still attempts to create the surface anyway. Disabled colour swapped 555 
+	  and 565 optimized scalers.
+
 2010-08-17  Ryan Nunn <colourles@users.sourceforge.net>
 	* exult.cc, imagewin/* : Cleaning up scaler handling code, fixing bugs,
 	  generally making things more flexible for future changes.
